# Windows-Productivity-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_wpa.bat
src/wpa/: main.py
src/wpa/agent/: __init__.py  graph.py  intent_classifier.py  nodes.py  prompts.py  response_generator.py  state.py  tool_executor.py  tool_router.py
src/wpa/agent/tools/: __init__.py  app_tools.py  file_tools.py  screen_tools.py  system_tools.py  web_tools.py
src/wpa/memory/: __init__.py  chroma_memory.py  memory_manager.py  sqlite_memory.py
src/wpa/ui/: tray.py
src/wpa/utils/: logger.py
src/wpa/voice/: stt.py  tts.py  wakeword.py
tests/: helper.py  test_arc.py  test_conversation_context.py  test_mem_chromadb.py  test_mem_sqlite.py  test_ollama.py  test_openwakeword.py  view_chroma_memory.py  view_sqlite_memory.py
