[project]
name = "agent-windows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.5.9",
    "comtypes>=1.4.16",
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mss>=10.2.0",
    "numpy>=2.4.4",
    "openwakeword>=0.4.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pycaw>=20251023",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pystray>=0.19.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
